Thu Oct 03 17:15:40 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: Implement
	  KroneckerProduct (alias TensorProduct)

	* help/C/genius.xml: Document KroneckerProduct and add a few
	  wikipedia links and some minor improvements.

	* src/geniustests.txt: add tests

Wed Oct 02 17:36:54 2013  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: bump version 

Wed Oct 02 17:35:09 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: remove bunch of unused stuff to fix warnings.

	* src/graphing.c: Allow setting color in LinePlotDrawLine as a
	  3-vector of RGB values in the range of 0 to 1.

	* help/C/genius.xml: Document changes to LinePlotDrawLine and
	  rewrite part of that entry.

	* src/graphing.c: Allow zooming by selecting when we just do
	  LinePlotDrawLine and not a LinePlot first.

Tue Oct 01 21:35:09 2013  Jiri (George) Lebl <jirka@5z.com>

	* autogen.sh, configure.in: updates, for example we still refer
	  to cvs

Tue Oct 01 18:16:21 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*.c: fix some more warnings include a leak

Tue Oct 01 18:02:13 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c, src/mpwrap.[ch]: fix subtle copy on write error with
	  nested for loops with a floating point "by"
	
	* src/eval.[ch]: fix a nasty side effect of erroneously telling gcc
	  that a function is pure

	* gtkextra/*.c: fix some warnings

Wed Jun 26 14:33:09 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/funclibhelper.cP: implement subsecond precision
	  in wait (approx 10ms) by simply passing in a noninteger number.

Tue Jun 25 16:11:28 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: A few updates, clarify how escapes in strings
	  work, add lots of hyperlinks when mentioning functions.

Tue Jun 25 14:57:03 2013  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.17

Tue Jun 25 14:48:55 2013  Jiri (George) Lebl <jirka@5z.com>
