@@ -1,3 +1,8 @@
+Tue Oct 08 16:54:53 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: Very simple PlotCanvasFreeze/Thaw functions, need
+	  improvement and documentation
+
 Thu Oct 03 17:15:40 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/linear_algebra/linear_algebra.gel: Implement
